--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "react"
   ],
   "rules": {
-    "react/style-prop-object": "off"
+    "react/prop-types": "off",
+    "react/style-prop-object": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
